# Test-work

./: .gitignore  pyproject.toml  readme.md
src/: data_processor.py  main.py  plotter.py
src/tests/: test_data_processor.py  test_main.py  test_plotter.py
src/wiki_api_client/: api_client.py  types.py
src/wiki_api_client/tests/: test_api_client.py
