[project]
name = "eqvilent-task"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vertliba V.V.", email = "vertliba.vv@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "matplotlib>=3.10.0",
    "aiohttp>=3.11.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.8",
]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eqvilent_task"]
